# liquid

./: .gitattributes  .gitignore  CLAUDE.md  MEMORY.md  README.md
memory/: README.md
memory/00-system/: memory-manifest.json  memory-rules.md  task-load-map.md
memory/01-foundation/: project-brief.md
memory/10-product/: product-vision.md
memory/11-research/: high-speed-fluid-solid-coupling-survey.md  reference-games.md  technical-surveys.md
memory/20-design/: core-gameplay-loop.md  physics-authenticity-principles.md
memory/30-prototype/: mvp-square-glass-container.md  trackball-control.md  unity-splishsplash-prototype.md  unity-zibra-prototype.md  web-prototype-implementation.md
memory/90-active/: current-context.md
memory/_templates/: decision-template.md  memory-note-template.md
prototype/: README.md
prototype/assets/: README.md
prototype/engine/: README.md
prototype/engine/unity/: README.md
prototype/engine/unity/Assets/: UniversalRenderPipelineGlobalSettings.asset
prototype/engine/unity/Assets/Editor/: FlipSolverBootstrap.cs  PrototypeProjectBootstrap.cs  Test1FbxBatchEntry.cs  Test1FbxSceneTools.cs
prototype/engine/unity/Assets/Materials/: PrototypeBackdrop.mat  PrototypeFluidMaskParticle.mat  PrototypeFluidSurfaceComposite.mat  PrototypeFrame.mat  PrototypeGlass.mat  PrototypeLiquidMarker.mat  PrototypePlaybackParticle.mat  PrototypeReflectionCard.mat  PrototypeRefractionTestFace.mat  Test1CadGlass.mat
prototype/engine/unity/Assets/Scenes/: SPlisHSPlasHPlaybackPrototype.unity  SPlisHSPlasHRealtimePrototype.unity  SquareContainerPrototype.unity  Test1.fbx  Test1InnerCollider.asset  test1.SLDPRT  test1.STL  test2.unity  text1.unity
prototype/engine/unity/Assets/Scripts/: PrototypeLiquidDebugOverlay.cs  PrototypeOrbitCameraController.cs  PrototypeSessionController.cs  PrototypeTimedComponentDisabler.cs  SPlisHSPlasHFluidSurfaceRenderer.cs  SPlisHSPlasHPlaybackController.cs  SPlisHSPlasHRealtimeController.cs  (+1 more)
prototype/engine/unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
prototype/engine/unity/native/splishsplash_bridge/: CMakeLists.txt
prototype/engine/unity/native/splishsplash_bridge/src/: SPlisHSPlasHUnityBridge.cpp
prototype/engine/web/: README.md  app.js  index.html  styles.css
scripts/: get-memory.ps1  run-web-prototype.ps1
tools/: convert_splishsplash_vtk_to_cache.py
(+25 files in other folders)
